--- a/pom.xml
+++ b/pom.xml
@@ -8,8 +8,8 @@
 		<version>1.3.2</version>
 	</parent>
 
-	<groupId>com.qunar.ops.workflow</groupId>
-	<artifactId>engine</artifactId>
+	<groupId>com.qunar.ops.oa</groupId>
+	<artifactId>oaengine</artifactId>
 	<version>1.0.0-SNAPSHOT</version>
 	<packaging>war</packaging>
 
