--- a/src/main/resources.dev/workflow.properties
+++ b/src/main/resources.dev/workflow.properties
@@ -6,7 +6,7 @@
 #hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
 sql.type=postgresql
 jdbc.driver=org.postgresql.Driver
-jdbc.url=jdbc:postgresql://localhost:5492/activiti
+jdbc.url=jdbc:postgresql://localhost:5432/activiti
 jdbc.username=activiti
 jdbc.password=activiti
 
@@ -31,6 +31,9 @@ hibernate.version=${hibernate.version}
 activiti.version=${activiti.version}
 activiti.engine.version=${activiti.engine.version}
 
-physicalrequest.apihost=http://api.corp.qunar.com/apptree/v1/owners/filter?tree=
+physicalrequest.apihost=http://l-atlas.ops.beta.cn6.qunar.com:8001/v1/owners/filter?tree=
 virtualrequest.apihost=http://qunar.it/api/employees/?require=info&rtx_id=
-accountApplyCandate.apihost=http://l-dongliang.ops.dev.cn6.qunar.com:8888
+
+accountApplyCandate.apihost=http://l-atlas.ops.beta.cn6.qunar.com
+
+#approve.processlist=abc,m,http://zhenqing.qunar.com:8080/engine/abc/start,'abc';cde,m,http://zhenqing.qunar.com:8080/engine/cde/start,'cde';qb1,m,http://zhenqing.qunar.com:8080/engine/qb1/start,'qb1';qb2,m,http://zhenqing.qunar.com:8080/engine/qb2/start,'qb2';wzq1,m,http://zhenqing.qunar.com:8080/engine/wzq1/start,'wzq1';wzq2,m,http://zhenqing.qunar.com:8080/engine/wzq2/start,'wzq2'
