--- a/src/main/resources/oaengine.properties
+++ b/src/main/resources/oaengine.properties
@@ -6,7 +6,7 @@
 #hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
 sql.type=postgresql
 jdbc.driver=org.postgresql.Driver
-jdbc.url=jdbc:postgresql://localhost:5432/activiti
+jdbc.url=jdbc:postgresql://localhost:5432/oa
 jdbc.username=activiti
 jdbc.password=activiti
 
