--- a/src/main/resources/oaengine.properties
+++ b/src/main/resources/oaengine.properties
@@ -6,7 +6,7 @@
 #hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
 sql.type=postgresql
 jdbc.driver=org.postgresql.Driver
-jdbc.url=jdbc:postgresql://localhost:5432/oa
+jdbc.url=jdbc:postgresql://localhost:5432/activiti
 jdbc.username=activiti
 jdbc.password=activiti
 
@@ -23,6 +23,14 @@ mq.password=guest123
 #redis
 redis.host=l-pz1.ops.dev.cn6.qunar.com
 redis.port=6379
+
+#mail
+mail.host=smtp.gmail.com
+mail.port=587
+mail.username=niannian199@gmail.com
+mail.password=!qaz2wsX
+mail.smtp.auth=true
+mail.smtp.starttls.enable=true
 
 #versions
 system.version=${project.version}
