--- a/pom.xml
+++ b/pom.xml
@@ -133,6 +133,10 @@
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-test</artifactId>
 		</dependency>
+		<dependency>
+      		<groupId>javax.mail</groupId>
+      		<artifactId>mail</artifactId>
+    	</dependency>
 		<!-- mybatis module -->
 		<dependency>
 			<groupId>org.mybatis</groupId>
