--- a/src/main/resources.prod/workflow.properties
+++ b/src/main/resources.prod/workflow.properties
@@ -15,6 +15,9 @@ dbcp.initialSize=5
 dbcp.maxActive=20
 dbcp.maxIdle=10
 
+#mail
+email.host=mta1.corp.qunar.com
+
 #mq
 mq.host=l-pg.ops.dev.cn6.qunar.com:5672
 mq.username=guest
