--- a/pom.xml
+++ b/pom.xml
@@ -71,6 +71,12 @@
 	</properties>
 
 	<dependencies>
+      <dependency>
+        <groupId>junit</groupId>
+        <artifactId>junit-dep</artifactId>
+        <version>4.10</version>
+        <scope>test</scope>
+      </dependency>
 		<!-- activiti -->
 		<dependency>
 			<groupId>org.activiti</groupId>
