--- a/src/main/resources/mq.properties
+++ b/src/main/resources/mq.properties
@@ -1,9 +1,4 @@
 # MQ Configuration
-mqHost=localhost
-mqPort=5672
+mqHost=l-pg.ops.dev.cn6.qunar.com:5672
 mqUsername=guest
-mqPassword=guest
-
-#mqHost=l-opsdb.ops.cn1.qunar.com:5672
-#mqUsername=guest
-#mqPassword=Qunar_MSQ
+mqPassword=guest123
