修改数据库连接

--- a/src/main/resources.beta/oaengine.properties
+++ b/src/main/resources.beta/oaengine.properties
@@ -6,9 +6,9 @@
 #hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
 sql.type=postgresql
 jdbc.driver=org.postgresql.Driver
-jdbc.url=jdbc:postgresql://localhost:5492/activiti
-jdbc.username=activiti
-jdbc.password=c84f7ac0e2a9
+jdbc.url=jdbc:postgresql://l-pg.ops.dev.cn6.qunar.com:5432/oa
+jdbc.username=oa
+jdbc.password=YXMinTxLoeNa
 
 #dbcp settings
 dbcp.initialSize=5
@@ -39,4 +39,4 @@ hibernate.version=${hibernate.version}
 activiti.version=${activiti.version}
 activiti.engine.version=${activiti.engine.version}
 
-backyard.apihost=http://l-backyard1.ops.dev.cn6.qunar.com:5588/api/employees/
+backyard.apihost=http://qunar.it/api/employees/
