--- a/src/main/resources.prod/oaengine.properties
+++ b/src/main/resources.prod/oaengine.properties
@@ -6,7 +6,7 @@
 #hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
 sql.type=postgresql
 jdbc.driver=org.postgresql.Driver
-jdbc.url=jdbc:postgresql://l-opsdb.ops.cn1.qunar.com:5432/activiti
+jdbc.url=jdbc:postgresql://l-opsdb.ops.cn1.qunar.com:5432/oa
 jdbc.username=postgres
 jdbc.password=c6cab38dad7fb29e34b6e1a392e45e56
 
@@ -39,4 +39,4 @@ hibernate.version=${hibernate.version}
 activiti.version=${activiti.version}
 activiti.engine.version=${activiti.engine.version}
 
-backyard.apihost=http://l-backyard1.ops.dev.cn6.qunar.com:5588/api/employees/
+backyard.apihost=http://qunar.it/api/employees/
