--- a/src/main/resources/oaengine.properties
+++ b/src/main/resources/oaengine.properties
@@ -7,8 +7,8 @@
 sql.type=postgresql
 jdbc.driver=org.postgresql.Driver
 jdbc.url=jdbc:postgresql://localhost:5432/oa
-jdbc.username=activiti
-jdbc.password=activiti
+jdbc.username=postgres
+jdbc.password=123456
 
 #dbcp settings
 dbcp.initialSize=5
