--- a/src/main/resources.beta/mq.properties
+++ b/src/main/resources.beta/mq.properties
@@ -1,9 +1,7 @@
 # MQ Configuration
-mqHost=l-pg.ops.dev.cn6.qunar.com
-mqPort=5672
-mqUsername=bpm
-mqPassword=sdaxaxd4e123easxcasx
-mqVhost=/bpm
+mqHost=l-pg.ops.dev.cn6.qunar.com:5672
+mqUsername=guest
+mqPassword=guest123
 
 #mqHost=l-opsdb.ops.cn1.qunar.com:5672
 #mqUsername=guest
