--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,7 @@
 	<version>1.0.0-SNAPSHOT</version>
 	<packaging>war</packaging>
 
-	<name>engine</name>
+	<name>oaengine</name>
 	<url>http://tc.corp.quanr.com</url>
 
 
@@ -270,6 +270,6 @@
 			</plugin>
 		</plugins>
 
-		<finalName>oa</finalName>
+		<finalName>oaengine</finalName>
 	</build>
 </project>
