--- a/src/main/resources/oaengine.properties
+++ b/src/main/resources/oaengine.properties
@@ -25,12 +25,19 @@ redis.host=l-pz1.ops.dev.cn6.qunar.com
 redis.port=6379
 
 #mail
-mail.host=smtp.gmail.com
-mail.port=587
-mail.username=niannian199@gmail.com
-mail.password=!qaz2wsX
-mail.smtp.auth=true
-mail.smtp.starttls.enable=true
+#mail.host=smtp.gmail.com
+#mail.port=587
+#mail.username=niannian199@gmail.com
+#mail.password=!qaz2wsX
+#mail.smtp.auth=true
+#mail.smtp.starttls.enable=true
+
+mail.host=""
+mail.port=""
+mail.username=""
+mail.password=""
+mail.smtp.auth=""
+mail.smtp.starttls.enable=""
 
 #versions
 system.version=${project.version}
