--- a/src/main/resources/oaengine.properties
+++ b/src/main/resources/oaengine.properties
@@ -8,7 +8,7 @@ sql.type=postgresql
 jdbc.driver=org.postgresql.Driver
 jdbc.url=jdbc:postgresql://localhost:5432/oa
 jdbc.username=postgres
-jdbc.password=123456
+jdbc.password=localhost
 
 #dbcp settings
 dbcp.initialSize=5
@@ -25,19 +25,19 @@ redis.host=l-pz1.ops.dev.cn6.qunar.com
 redis.port=6379
 
 #mail
-#mail.host=smtp.gmail.com
-#mail.port=587
-#mail.username=niannian199@gmail.com
-#mail.password=!qaz2wsX
-#mail.smtp.auth=true
-#mail.smtp.starttls.enable=true
+mail.host=smtp.gmail.com
+mail.port=587
+mail.username=niannian199@gmail.com
+mail.password=!qaz2wsX
+mail.smtp.auth=true
+mail.smtp.starttls.enable=true
 
-mail.host=""
-mail.port=""
-mail.username=""
-mail.password=""
-mail.smtp.auth=""
-mail.smtp.starttls.enable=""
+#mail.host=""
+#mail.port=""
+#mail.username=""
+#mail.password=""
+#mail.smtp.auth=""
+#mail.smtp.starttls.enable=""
 
 #versions
 system.version=${project.version}
