--- a/src/main/resources/oaengine.properties
+++ b/src/main/resources/oaengine.properties
@@ -32,7 +32,6 @@ mail.password=!qaz2wsX
 mail.smtp.auth=true
 mail.smtp.starttls.enable=true
 
-debug=true
 
 #versions
 system.version=${project.version}
@@ -43,6 +42,7 @@ activiti.engine.version=${activiti.engine.version}
 
 backyard.apihost=http://qunar.it/api/employees/
 oa.apihost=http://l-oa2.ops.beta.cn6.qunar.com/seeyon/
-#backyard.apihost=http://l-backyard1.ops.dev.cn6.qunar.com:5588/api/employees/
+login.apihost=http://l-adauth1.beta.ops.cn0.qunar.com:10020/api/v1/auth
+login.appkey=testapp
 
-#approve.processlist=abc,m,http://zhenqing.qunar.com:8080/engine/abc/start,'abc';cde,m,http://zhenqing.qunar.com:8080/engine/cde/start,'cde';qb1,m,http://zhenqing.qunar.com:8080/engine/qb1/start,'qb1';qb2,m,http://zhenqing.qunar.com:8080/engine/qb2/start,'qb2';wzq1,m,http://zhenqing.qunar.com:8080/engine/wzq1/start,'wzq1';wzq2,m,http://zhenqing.qunar.com:8080/engine/wzq2/start,'wzq2'
+debug=true
