--- a/src/main/resources.beta/oaengine.properties
+++ b/src/main/resources.beta/oaengine.properties
@@ -32,7 +32,6 @@ mail.password=!qaz2wsX
 mail.smtp.auth=true
 mail.smtp.starttls.enable=true
 
-debug=true
 
 #versions
 system.version=${project.version}
@@ -43,3 +42,8 @@ activiti.engine.version=${activiti.engine.version}
 
 backyard.apihost=http://qunar.it/api/employees/
 oa.apihost=http://l-oa2.ops.beta.cn6.qunar.com/seeyon/
+login.apihost=http://l-adauth1.beta.ops.cn0.qunar.com:10020/api/v1/auth
+login.appkey=testapp
+
+
+debug=true
