--- a/src/main/resources.beta/oaengine.properties
+++ b/src/main/resources.beta/oaengine.properties
@@ -40,7 +40,8 @@ hibernate.version=${hibernate.version}
 activiti.version=${activiti.version}
 activiti.engine.version=${activiti.engine.version}
 
-backyard.apihost=http://qunar.it/api/employees/
+#backyard.apihost=http://qunar.it/api/employees/
+backyard.apihost=http://l-backyard1.ops.dev.cn6.qunar.com:8899/api/employees/
 oa.apihost=http://l-oa2.ops.beta.cn6.qunar.com/seeyon/
 login.apihost=http://l-adauth1.beta.ops.cn0.qunar.com:10020/api/v1/auth
 login.appkey=testapp
