--- a/pom.xml
+++ b/pom.xml
@@ -278,6 +278,12 @@
             <artifactId>janino</artifactId>
             <version>2.5.10</version>
         </dependency>
+        
+        <dependency>
+            <groupId>org.apache.poi</groupId>
+            <artifactId>poi</artifactId>
+            <version>3.11</version>  
+        </dependency>
     </dependencies>
     <build>
         <plugins>
