--- a/src/main/resources/oaengine.properties
+++ b/src/main/resources/oaengine.properties
@@ -6,12 +6,12 @@
 #hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
 sql.type=postgresql
 jdbc.driver=org.postgresql.Driver
-#jdbc.url=jdbc:postgresql://localhost:5432/oa
-#jdbc.username=activiti
-#jdbc.password=activiti
-jdbc.url=jdbc:postgresql://l-pg.ops.dev.cn6.qunar.com:5432/oa
-jdbc.username=oa
-jdbc.password=YXMinTxLoeNa
+jdbc.url=jdbc:postgresql://localhost:5432/oa
+jdbc.username=activiti
+jdbc.password=activiti
+#jdbc.url=jdbc:postgresql://l-pg.ops.dev.cn6.qunar.com:5432/oa
+#jdbc.username=oa
+#jdbc.password=YXMinTxLoeNa
 
 #dbcp settings
 dbcp.initialSize=5
@@ -43,8 +43,8 @@ hibernate.version=${hibernate.version}
 activiti.version=${activiti.version}
 activiti.engine.version=${activiti.engine.version}
 
-#backyard.apihost=http://qunar.it/api/employees/
-backyard.apihost=http://l-backyard1.ops.dev.cn6.qunar.com:8899/api/employees/
+backyard.apihost=http://qunar.it/api/employees/
+#backyard.apihost=http://l-backyard1.ops.dev.cn6.qunar.com:8899/api/employees/
 oa.apihost=http://l-oa2.ops.beta.cn6.qunar.com/seeyon/
 login.apihost=http://l-adauth1.beta.ops.cn0.qunar.com:10020/api/v1/auth
 login.appkey=testapp
