--- a/pom.xml
+++ b/pom.xml
@@ -284,6 +284,12 @@
             <artifactId>poi</artifactId>
             <version>3.11</version>  
         </dependency>
+        
+    	<dependency>
+      		<groupId>joda-time</groupId>
+      		<artifactId>joda-time</artifactId>
+      		<version>2.1</version>
+      	</dependency>
     </dependencies>
     <build>
         <plugins>
