--- a/src/main/resources/oaengine.properties
+++ b/src/main/resources/oaengine.properties
@@ -19,13 +19,13 @@ dbcp.maxActive=20
 dbcp.maxIdle=10
 
 #mq
-mq.host=l-pg.ops.dev.cn6.qunar.com:5672
-mq.username=guest
-mq.password=guest123
+#mq.host=l-pg.ops.dev.cn6.qunar.com:5672
+#mq.username=guest
+#mq.password=guest123
 
 #redis
-redis.host=l-pz1.ops.dev.cn6.qunar.com
-redis.port=6379
+#redis.host=l-pz1.ops.dev.cn6.qunar.com
+#redis.port=6379
 
 #mail
 mail.host=smtp.gmail.com
@@ -44,10 +44,12 @@ activiti.version=${activiti.version}
 activiti.engine.version=${activiti.engine.version}
 
 backyard.apihost=http://qunar.it/api/employees/
+backyard.apihost.bank=http://qunar.it/api/employees/
 #backyard.apihost=http://l-backyard1.ops.dev.cn6.qunar.com:8899/api/employees/
-backyard.apihost.bank=http://l-backyard1.ops.dev.cn6.qunar.com:5588/api/employees/
-oa.apihost=http://l-oa2.ops.beta.cn6.qunar.com/seeyon/
-login.apihost=http://l-adauth1.beta.ops.cn0.qunar.com:10020/api/v1/auth
+#backyard.apihost.bank=http://l-backyard1.ops.dev.cn6.qunar.com:5588/api/employees/
+#oa.apihost=http://l-oa2.ops.beta.cn6.qunar.com/seeyon/
+oa.apihost=http://l-qpx1.qss.dev.cn0.qunar.com:8080/withoutInterceptor/qboss/qpx/ltb/ap/borrowInvoice/
+login.apihost=http://adauth.corp.qunar.com/api/v1/auth
 login.appkey=testapp
 
 debug=true
