--- a/src/main/resources.beta/oaengine.properties
+++ b/src/main/resources.beta/oaengine.properties
@@ -25,12 +25,12 @@ redis.host=l-pz1.ops.dev.cn6.qunar.com
 redis.port=6379
 
 #mail
-mail.host=smtp.gmail.com
-mail.port=587
-mail.username=niannian199@gmail.com
-mail.password=!qaz2wsX
-mail.smtp.auth=true
-mail.smtp.starttls.enable=true
+mail.host=mta3.corp.qunar.com
+mail.port=25
+mail.username=
+mail.password=
+mail.smtp.auth=false
+mail.smtp.starttls.enable=false
 
 
 #versions
