--- a/src/main/resources.prod/oaengine.properties
+++ b/src/main/resources.prod/oaengine.properties
@@ -6,9 +6,12 @@
 #hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
 sql.type=postgresql
 jdbc.driver=org.postgresql.Driver
-jdbc.url=jdbc:postgresql://l-opsdb.ops.cn1.qunar.com:5432/oa
-jdbc.username=postgres
-jdbc.password=c6cab38dad7fb29e34b6e1a392e45e56
+jdbc.url=jdbc:postgresql://localhost:5432/oa
+jdbc.username=activiti
+jdbc.password=activiti
+#jdbc.url=jdbc:postgresql://l-pg.ops.dev.cn6.qunar.com:5432/oa
+#jdbc.username=oa
+#jdbc.password=YXMinTxLoeNa
 
 #dbcp settings
 dbcp.initialSize=5
@@ -16,13 +19,13 @@ dbcp.maxActive=20
 dbcp.maxIdle=10
 
 #mq
-mq.host=l-pg.ops.dev.cn6.qunar.com:5672
-mq.username=guest
-mq.password=guest123
+#mq.host=l-pg.ops.dev.cn6.qunar.com:5672
+#mq.username=guest
+#mq.password=guest123
 
 #redis
-redis.host=l-pz1.ops.dev.cn6.qunar.com
-redis.port=6379
+#redis.host=l-pz1.ops.dev.cn6.qunar.com
+#redis.port=6379
 
 #mail
 mail.host=smtp.gmail.com
@@ -32,6 +35,7 @@ mail.password=!qaz2wsX
 mail.smtp.auth=true
 mail.smtp.starttls.enable=true
 
+
 #versions
 system.version=${project.version}
 spring.version=${spring.version}
@@ -40,3 +44,12 @@ activiti.version=${activiti.version}
 activiti.engine.version=${activiti.engine.version}
 
 backyard.apihost=http://qunar.it/api/employees/
+backyard.apihost.bank=http://qunar.it/api/employees/
+#backyard.apihost=http://l-backyard1.ops.dev.cn6.qunar.com:8899/api/employees/
+#backyard.apihost.bank=http://l-backyard1.ops.dev.cn6.qunar.com:5588/api/employees/
+#oa.apihost=http://l-oa2.ops.beta.cn6.qunar.com/seeyon/
+oa.apihost=http://l-qpx1.qss.dev.cn0.qunar.com:8080/withoutInterceptor/qboss/qpx/ltb/ap/borrowInvoice/
+login.apihost=http://adauth.corp.qunar.com/api/v1/auth
+login.appkey=workflow
+
+debug=true
