--- a/src/main/resources.beta/oaengine.properties
+++ b/src/main/resources.beta/oaengine.properties
@@ -45,7 +45,7 @@ backyard.apihost.bank=http://qunar.it/api/employees/
 #backyard.apihost=http://l-backyard1.ops.dev.cn6.qunar.com:8899/api/employees/
 oa.apihost=http://l-qpx1.qss.dev.cn0.qunar.com:8080/withoutInterceptor/qboss/qpx/ltb/ap/borrowInvoice/
 login.apihost=http://adauth.corp.qunar.com/api/v1/auth
-login.appkey=testapp
+login.appkey=workflow
 
 
 debug=true
