--- a/src/main/resources/oaengine.properties
+++ b/src/main/resources/oaengine.properties
@@ -50,6 +50,6 @@ backyard.apihost.bank=http://qunar.it/api/employees/
 #oa.apihost=http://l-oa2.ops.beta.cn6.qunar.com/seeyon/
 oa.apihost=http://l-qpx1.qss.dev.cn0.qunar.com:8080/withoutInterceptor/qboss/qpx/ltb/ap/borrowInvoice/
 login.apihost=http://adauth.corp.qunar.com/api/v1/auth
-login.appkey=testapp
+login.appkey=workflow
 
 debug=true
