--- a/pom.xml
+++ b/pom.xml
@@ -71,6 +71,10 @@
     </properties>
 
     <dependencies>
+	    <dependency>
+	      <groupId>com.google.guava</groupId>
+	      <artifactId>guava</artifactId>
+	    </dependency>
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit-dep</artifactId>
