--- a/src/main/resources.prod/oaengine.properties
+++ b/src/main/resources.prod/oaengine.properties
@@ -28,12 +28,12 @@ dbcp.maxIdle=10
 #redis.port=6379
 
 #mail
-mail.host=smtp.gmail.com
-mail.port=587
-mail.username=niannian199@gmail.com
-mail.password=!qaz2wsX
-mail.smtp.auth=true
-mail.smtp.starttls.enable=true
+mail.host=mta1.corp.qunar.com
+mail.port=25
+mail.username=
+mail.password=
+mail.smtp.auth=false
+mail.smtp.starttls.enable=false
 
 
 #versions
@@ -45,11 +45,8 @@ activiti.engine.version=${activiti.engine.version}
 
 backyard.apihost=http://qunar.it/api/employees/
 backyard.apihost.bank=http://qunar.it/api/employees/
-#backyard.apihost=http://l-backyard1.ops.dev.cn6.qunar.com:8899/api/employees/
-#backyard.apihost.bank=http://l-backyard1.ops.dev.cn6.qunar.com:5588/api/employees/
-#oa.apihost=http://l-oa2.ops.beta.cn6.qunar.com/seeyon/
 oa.apihost=http://l-qpx1.qss.dev.cn0.qunar.com:8080/withoutInterceptor/qboss/qpx/ltb/ap/borrowInvoice/
 login.apihost=http://adauth.corp.qunar.com/api/v1/auth
 login.appkey=workflow
 
-debug=true
+debug=false
