--- a/src/main/resources.prod/oaengine.properties
+++ b/src/main/resources.prod/oaengine.properties
@@ -6,12 +6,9 @@
 #hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
 sql.type=postgresql
 jdbc.driver=org.postgresql.Driver
-jdbc.url=jdbc:postgresql://localhost:5432/oa
-jdbc.username=activiti
-jdbc.password=activiti
-#jdbc.url=jdbc:postgresql://l-pg.ops.dev.cn6.qunar.com:5432/oa
-#jdbc.username=oa
-#jdbc.password=YXMinTxLoeNa
+jdbc.url=jdbc:postgresql://l-pg.ops.dev.cn6.qunar.com:5432/oa
+jdbc.username=oa
+jdbc.password=YXMinTxLoeNa
 
 #dbcp settings
 dbcp.initialSize=5
