--- a/src/main/resources.prod/mq.properties
+++ b/src/main/resources.prod/mq.properties
@@ -1,10 +1,4 @@
 # MQ Configuration
-mqHost=l-opsdb.ops.cn1.qunar.com
-mqPort=5672
-mqUsername=bpm
-mqPassword=sd12dasdcxzchc8923rzxc
-mqVhost=/bpm
-
-#mqHost=l-opsdb.ops.cn1.qunar.com:5672
-#mqUsername=guest
-#mqPassword=Qunar_MSQ
+mqHost=l-opsdb.ops.cn1.qunar.com:5672
+mqUsername=guest
+mqPassword=Qunar_MSQ
