--- a/src/main/resources.beta/mq.properties
+++ b/src/main/resources.beta/mq.properties
@@ -1,8 +1,4 @@
 # MQ Configuration
-mqHost=l-pg.ops.dev.cn6.qunar.com:5672
+mqHost=l-opsdb.ops.cn1.qunar.com:5672
 mqUsername=guest
-mqPassword=guest123
-
-#mqHost=l-opsdb.ops.cn1.qunar.com:5672
-#mqUsername=guest
-#mqPassword=Qunar_MSQ
+mqPassword=Qunar_MSQ
