--- a/src/main/resources/mq.properties
+++ b/src/main/resources/mq.properties
@@ -1,4 +1,4 @@
 # MQ Configuration
-mqHost=l-pg.ops.dev.cn6.qunar.com:5672
+mqHost=l-opsdb.ops.cn1.qunar.com:5672
 mqUsername=guest
-mqPassword=guest123
+mqPassword=Qunar_MSQ
