--- a/src/main/resources.prod/oaengine.properties
+++ b/src/main/resources.prod/oaengine.properties
@@ -7,8 +7,10 @@
 sql.type=postgresql
 jdbc.driver=org.postgresql.Driver
 jdbc.url.read=jdbc:postgresql://l-workflowdb1.ops.cn5.qunar.com:5432/activiti
-jdbc.username.read=workflow_ro
-jdbc.password.read=a5b8032f-ddbd-42e5-bbde-cadb2a806f67
+#jdbc.username.read=workflow_ro
+#jdbc.password.read=a5b8032f-ddbd-42e5-bbde-cadb2a806f67
+jdbc.username.read=workflow_rw
+jdbc.password.read=c6cab38dad7fb29e34b6e1a392e45e56
 jdbc.url.write=jdbc:postgresql://l-workflowdb1.ops.cn5.qunar.com:5432/activiti
 jdbc.username.write=workflow_rw
 jdbc.password.write=c6cab38dad7fb29e34b6e1a392e45e56
