优化邮件发送

--- a/src/main/resources/oaengine.properties
+++ b/src/main/resources/oaengine.properties
@@ -31,10 +31,10 @@ dbcp.maxIdle=10
 #redis.port=6379
 
 #mail
-mail.host=smtp.gmail.com
+mail.host=smtp.163.com
 mail.port=587
-mail.username=niannian199@gmail.com
-mail.password=!qaz2wsX
+mail.username=13810858004@163.com
+mail.password=1qaz2wsx
 mail.smtp.auth=true
 mail.smtp.starttls.enable=true
 
