--- a/pom.xml
+++ b/pom.xml
@@ -302,6 +302,12 @@
       		<artifactId>joda-time</artifactId>
       		<version>2.1</version>
       	</dependency>
+      	
+        <dependency>
+            <groupId>com.lmax</groupId>
+            <artifactId>disruptor</artifactId>
+            <version>3.3.0</version>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
