--- a/src/main/resources.beta/oaengine.properties
+++ b/src/main/resources.beta/oaengine.properties
@@ -42,5 +42,6 @@ oa.apihost=http://l-qpx1.qss.dev.cn0.qunar.com:8080/withoutInterceptor/qboss/qpx
 login.apihost=http://adauth.corp.qunar.com/api/v1/auth
 login.appkey=workflow
 
+qss.url=http://l-qpx2.qss.beta.cn0.qunar.com:8080/withoutInterceptor/apInvoice/generalBill
 
 debug=true
