--- a/src/main/resources/oaengine.properties
+++ b/src/main/resources/oaengine.properties
@@ -48,10 +48,12 @@ activiti.engine.version=${activiti.engine.version}
 
 #backyard.apihost=http://qunar.it/api/employees/
 #backyard.apihost.bank=http://qunar.it/api/employees/
-backyard.apihost=http://l-backyard1.ops.dev.cn6.qunar.com:8899/api/employees/
-backyard.apihost.bank=http://l-backyard1.ops.dev.cn6.qunar.com:8899/api/employees/
+backyard.apihost=http://l-backyard1.ops.beta.cn0.qunar.com:10050/api/employees/
+backyard.apihost.bank=http://l-backyard1.ops.beta.cn0.qunar.com:10050/api/employees/
 oa.apihost=http://l-qpx1.qss.dev.cn0.qunar.com:8080/withoutInterceptor/qboss/qpx/ltb/ap/borrowInvoice/
 login.apihost=http://adauth.corp.qunar.com/api/v1/auth
 login.appkey=workflow
+
+qss.url=http://l-qpx2.qss.beta.cn0.qunar.com:8080/withoutInterceptor/apInvoice/generalBill
 
 debug=true
