--- a/src/main/resources.dev/oaengine.properties
+++ b/src/main/resources.dev/oaengine.properties
@@ -41,4 +41,6 @@ activiti.engine.version=${activiti.engine.version}
 
 backyard.apihost=http://qunar.it/api/employees/
 
+qss.url=http://l-qpx2.qss.beta.cn0.qunar.com:8080/withoutInterceptor/apInvoice/generalBill
+
 #approve.processlist=abc,m,http://zhenqing.qunar.com:8080/engine/abc/start,'abc';cde,m,http://zhenqing.qunar.com:8080/engine/cde/start,'cde';qb1,m,http://zhenqing.qunar.com:8080/engine/qb1/start,'qb1';qb2,m,http://zhenqing.qunar.com:8080/engine/qb2/start,'qb2';wzq1,m,http://zhenqing.qunar.com:8080/engine/wzq1/start,'wzq1';wzq2,m,http://zhenqing.qunar.com:8080/engine/wzq2/start,'wzq2'
