--- a/src/main/resources.beta/oaengine.properties
+++ b/src/main/resources.beta/oaengine.properties
@@ -44,4 +44,7 @@ login.appkey=workflow
 
 qss.url=http://l-qpx2.qss.beta.cn0.qunar.com:8080/withoutInterceptor/apInvoice/generalBill
 
+#acl
+api.acl=*
+
 debug=true
