--- a/src/main/resources.prod/oaengine.properties
+++ b/src/main/resources.prod/oaengine.properties
@@ -48,4 +48,7 @@ login.appkey=workflow
 
 qss.url=http://px.corp.qunar.com/withoutInterceptor/apInvoice/generalBill
 
+#acl
+api.acl=*
+
 debug=false
