--- a/src/main/resources/oaengine.properties
+++ b/src/main/resources/oaengine.properties
@@ -31,12 +31,12 @@ dbcp.maxIdle=10
 #redis.port=6379
 
 #mail
-mail.host=smtp.163.com
-mail.port=587
-mail.username=13810858004@163.com
-mail.password=1qaz2wsx
-mail.smtp.auth=true
-mail.smtp.starttls.enable=true
+mail.host=mta3.corp.qunar.com
+mail.port=25
+mail.username=
+mail.password=
+mail.smtp.auth=false
+mail.smtp.starttls.enable=false
 
 
 #versions
