--- a/src/main/resources/oaengine.properties
+++ b/src/main/resources/oaengine.properties
@@ -19,10 +19,10 @@ sql.type=postgresql
 jdbc.driver=org.postgresql.Driver
 jdbc.url.read=jdbc:postgresql://localhost:5432/oa
 jdbc.username.read=activiti
-jdbc.password.read=123456
+jdbc.password.read=activiti
 jdbc.url.write=jdbc:postgresql://localhost:5432/oa
 jdbc.username.write=activiti
-jdbc.password.write=123456
+jdbc.password.write=activiti
 
 #jdbc.url=jdbc:postgresql://l-pg.ops.dev.cn6.qunar.com:5432/oa
 #jdbc.username=oa
