--- a/src/main/resources/oaengine.properties
+++ b/src/main/resources/oaengine.properties
@@ -43,11 +43,11 @@ dbcp.maxIdle=10
 #redis.port=6379
 
 #mail
-mail.host=mta3.corp.qunar.com
+mail.host=smtp.163.com
 mail.port=25
-mail.username=
-mail.password=
-mail.smtp.auth=false
+mail.username=leeguoo@163.com
+mail.password=xiaoli123
+mail.smtp.auth=true
 mail.smtp.starttls.enable=false
 
 
