--- a/src/main/resources/oaengine.properties
+++ b/src/main/resources/oaengine.properties
@@ -66,7 +66,8 @@ oa.apihost=http://l-qpx1.qss.dev.cn0.qunar.com:8080/withoutInterceptor/qboss/qpx
 login.apihost=http://adauth.corp.qunar.com/api/v1/auth
 login.appkey=workflow
 
-qss.url=http://l-qpx2.qss.beta.cn0.qunar.com:8080/withoutInterceptor/apInvoice/generalBill
+#qss.url=http://l-qpx2.qss.beta.cn0.qunar.com:8080/withoutInterceptor/apInvoice/generalBill
+qss.url=http://l-qpx1.qss.dev.cn0.qunar.com/withoutInterceptor/apInvoice/generalBill
 
 #acl
 api.acl=*
