增加定时器，修改bug 召回后加签的问题

--- a/src/main/resources.beta/oaengine.properties
+++ b/src/main/resources.beta/oaengine.properties
@@ -28,6 +28,12 @@ mail.smtp.auth=false
 mail.smtp.starttls.enable=false
 
 
+#qschedule
+#qschedule.zkAddress=l-zk1.plat.dev.cn6.qunar.com:2181
+qschedule.zkAddress=zk.beta.corp.qunar.com:2181,zk1.beta.corp.qunar.com:2181,zk2.beta.corp.qunar.com:2181,zk3.beta.corp.qunar.com:2181
+qschedule.port=20070
+
+
 #versions
 system.version=${project.version}
 spring.version=${spring.version}
