--- a/src/main/resources.dev/oaengine.properties
+++ b/src/main/resources.dev/oaengine.properties
@@ -24,6 +24,11 @@ mq.password=guest123
 redis.host=l-pz1.ops.dev.cn6.qunar.com
 redis.port=6379
 
+#qschedule
+#qschedule.zkAddress=l-zk1.plat.dev.cn6.qunar.com:2181
+qschedule.zkAddress=zk.dev.corp.qunar.com:2181
+qschedule.port=20070
+
 #mail
 mail.host=smtp.gmail.com
 mail.port=587
