--- a/src/main/resources/oaengine.properties
+++ b/src/main/resources/oaengine.properties
@@ -33,6 +33,11 @@ dbcp.initialSize=5
 dbcp.maxActive=20
 dbcp.maxIdle=10
 
+#qschedule
+#qschedule.zkAddress=l-zk1.plat.dev.cn6.qunar.com:2181
+qschedule.zkAddress=zk.dev.corp.qunar.com:2181
+qschedule.port=20070
+
 #mq
 #mq.host=l-pg.ops.dev.cn6.qunar.com:5672
 #mq.username=guest
