--- a/pom.xml
+++ b/pom.xml
@@ -68,14 +68,27 @@
         <activiti.version>5.16.3</activiti.version>
         <activiti.engine.version>5.16.3</activiti.engine.version>
         <jetty.version>8.1.10.v20130312</jetty.version>
+        <qunar.common.version>8.1.10</qunar.common.version>
     </properties>
 
-    <dependencies>
+	  <dependencies>
+		<dependency>
+			<groupId>qunar.tc.qschedule</groupId>
+			<artifactId>qschedule-client</artifactId>
+			<version>1.0.2</version>
+			 <exclusions>
+                    <exclusion>
+                        <groupId>com.alibaba</groupId>
+                        <artifactId>fastjson</artifactId>
+                    </exclusion>
+                </exclusions>
+		</dependency>
 	    <dependency>
 	      <groupId>com.google.guava</groupId>
 	      <artifactId>guava</artifactId>
 	    </dependency>
-        <dependency>
+	    
+	    <dependency>
             <groupId>junit</groupId>
             <artifactId>junit-dep</artifactId>
             <scope>test</scope>
@@ -101,6 +114,12 @@
             <groupId>org.infinispan</groupId>
             <artifactId>infinispan-core</artifactId>
             <version>5.1.7.Final</version>
+            <exclusions>
+                    <exclusion>
+                        <groupId>org.jboss.logging</groupId>
+                        <artifactId>jboss-logging</artifactId>
+                    </exclusion>
+             </exclusions>
         </dependency>
 
         <!-- servlet api -->
@@ -229,6 +248,12 @@
             <groupId>com.fasterxml.uuid</groupId>
             <artifactId>java-uuid-generator</artifactId>
             <version>3.1.3</version>
+            <exclusions>
+            	<exclusion>
+            		<artifactId>log4j</artifactId>
+            		<groupId>log4j</groupId>
+            	</exclusion>
+            </exclusions>
         </dependency>
         
 		<dependency>
