--- a/src/main/resources.prod/oaengine.properties
+++ b/src/main/resources.prod/oaengine.properties
@@ -33,6 +33,11 @@ mail.smtp.auth=false
 mail.smtp.starttls.enable=false
 
 
+#qschedule
+qschedule.zkAddress=l-zk1.plat.cn6:2181,l-zk2.plat.cn6:2181,l-zk3.plat.cn6:2181,l-zk4.plat.cn6:2181,l-zk5.plat.cn6:2181
+qschedule.port=20071
+
+
 #versions
 system.version=${project.version}
 spring.version=${spring.version}
