--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -6,7 +6,7 @@
 	<display-name>oaengine</display-name>
 	<context-param>
 		<param-name>contextConfigLocation</param-name>
-		<param-value>classpath:spring.xml,classpath:springmvc-servlet.xml</param-value>
+		<param-value>classpath:spring.xml,classpath:springmvc-servlet.xml,classpath:qschedule.xml</param-value>
 	</context-param>
 	<filter>
 		<description>字符集过滤器</description>
@@ -22,6 +22,14 @@
 		<filter-name>encodingFilter</filter-name>
 		<url-pattern>/*</url-pattern>
 	</filter-mapping>
+	 <filter>
+        <filter-name>watcher</filter-name>
+        <filter-class>qunar.ServletWatcher</filter-class>
+    </filter>
+     <filter-mapping>
+        <filter-name>watcher</filter-name>
+        <url-pattern>/*</url-pattern>
+    </filter-mapping>
 	<listener>
 		<description>spring监听器</description>
 		<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
@@ -51,7 +59,7 @@
 	</welcome-file-list>
 	<!-- 配置session超时时间，单位分钟 -->
 	<session-config>
-		<session-timeout>15</session-timeout>
+		<session-timeout>60</session-timeout>
 	</session-config>
 
 </web-app>
