--- a/src/main/resources/oaengine.properties
+++ b/src/main/resources/oaengine.properties
@@ -67,6 +67,7 @@ activiti.engine.version=${activiti.engine.version}
 #backyard.apihost.bank=http://qunar.it/api/employees/
 backyard.apihost=http://l-backyard1.ops.beta.cn0.qunar.com:10050/api/employees/
 backyard.apihost.bank=http://l-backyard1.ops.beta.cn0.qunar.com:10050/api/employees/
+backyard.drt_vp=http://l-isapi.ops.beta.cn0.qunar.com:10089/api/employees/
 oa.apihost=http://l-qpx1.qss.dev.cn0.qunar.com:8080/withoutInterceptor/qboss/qpx/ltb/ap/borrowInvoice/
 login.apihost=http://adauth.corp.qunar.com/api/v1/auth
 login.appkey=workflow
