--- a/src/main/resources.prod/oaengine.properties
+++ b/src/main/resources.prod/oaengine.properties
@@ -47,7 +47,7 @@ activiti.engine.version=${activiti.engine.version}
 
 backyard.apihost=http://qunar.it/api/employees/
 backyard.apihost.bank=http://qunar.it/api/employees/
-backyard.drt_vp=isapi.corp.qunar.com/api/employees/
+backyard.drt_vp=http://isapi.corp.qunar.com/api/employees/
 oa.apihost=http://l-qpx1.qss.dev.cn0.qunar.com:8080/withoutInterceptor/qboss/qpx/ltb/ap/borrowInvoice/
 login.apihost=http://adauth.corp.qunar.com/api/v1/auth
 login.appkey=workflow
