--- a/pom.xml
+++ b/pom.xml
@@ -339,6 +339,13 @@
             <artifactId>qmonitor</artifactId>
             <version>1.0.4</version>
         </dependency>
+        
+        <dependency>
+            <groupId>io.netty</groupId>
+            <artifactId>netty</artifactId>
+            <version>3.9.2.Final</version>
+        </dependency>
+        
     </dependencies>
     <build>
         <plugins>
