--- a/src/main/resources.beta/oaengine.properties
+++ b/src/main/resources.beta/oaengine.properties
@@ -41,10 +41,10 @@ hibernate.version=${hibernate.version}
 activiti.version=${activiti.version}
 activiti.engine.version=${activiti.engine.version}
 
-#backyard.apihost=http://qunar.it/api/employees/
-#backyard.apihost.bank=http://qunar.it/api/employees/
-backyard.apihost=http://l-backyard1.ops.beta.cn0.qunar.com:10050/api/employees/
-backyard.apihost.bank=http://l-backyard1.ops.beta.cn0.qunar.com:10050/api/employees/
+backyard.apihost=http://qunar.it/api/employees/
+backyard.apihost.bank=http://qunar.it/api/employees/
+#backyard.apihost=http://l-backyard1.ops.beta.cn0.qunar.com:10050/api/employees/
+#backyard.apihost.bank=http://l-backyard1.ops.beta.cn0.qunar.com:10050/api/employees/
 backyard.drt_vp=http://l-isapi.ops.beta.cn0.qunar.com:10089/api/employees/
 #backyard.apihost=http://l-backyard1.ops.dev.cn6.qunar.com:8899/api/employees/
 oa.apihost=http://l-qpx1.qss.dev.cn0.qunar.com:8080/withoutInterceptor/qboss/qpx/ltb/ap/borrowInvoice/
