--- a/src/main/resources/oaengine.properties
+++ b/src/main/resources/oaengine.properties
@@ -17,12 +17,12 @@
 
 sql.type=postgresql
 jdbc.driver=org.postgresql.Driver
-jdbc.url.read=jdbc:postgresql://localhost:5432/oa
-jdbc.username.read=activiti
-jdbc.password.read=activiti
-jdbc.url.write=jdbc:postgresql://localhost:5432/oa
-jdbc.username.write=activiti
-jdbc.password.write=activiti
+jdbc.url.read=jdbc:postgresql://l-pg.ops.dev.cn6.qunar.com:5432/oa
+jdbc.username.read=oa
+jdbc.password.read=YXMinTxLoeNa
+jdbc.url.write=jdbc:postgresql://l-pg.ops.dev.cn6.qunar.com:5432/oa
+jdbc.username.write=oa
+jdbc.password.write=YXMinTxLoeNa
 
 #jdbc.url=jdbc:postgresql://l-pg.ops.dev.cn6.qunar.com:5432/oa
 #jdbc.username=oa
