--- a/src/main/resources/recruit.properties
+++ b/src/main/resources/recruit.properties
@@ -1,11 +1,11 @@
 sql.type=postgresql
 jdbc.driver=org.postgresql.Driver
-jdbc.url.read=jdbc:postgresql://l-pg.ops.dev.cn6.qunar.com:5432/oa
-jdbc.username.read=oa
-jdbc.password.read=YXMinTxLoeNa
-jdbc.url.write=jdbc:postgresql://l-pg.ops.dev.cn6.qunar.com:5432/oa
-jdbc.username.write=oa
-jdbc.password.write=YXMinTxLoeNa
+jdbc.url.read=jdbc:postgresql://l-backyard1.ops.dev.cn6.qunar.com:5432/recruit
+jdbc.username.read=recruit
+jdbc.password.read=recruit
+jdbc.url.write=jdbc:postgresql://l-backyard1.ops.dev.cn6.qunar.com:5432/recruit
+jdbc.username.write=recruit
+jdbc.password.write=recruit
 
 #dbcp settings
 dbcp.initialSize=5
