--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -3,14 +3,8 @@
 	xmlns="http://java.sun.com/xml/ns/javaee" xmlns:web="http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
 	xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd"
 	id="WebApp_ID" version="3.0">
-	<!--###########注意, 此段listener和filter直接放置在web.xml顶端########-->
-	<!--###########连这段注释一起放, 避免其他同学copy时忽略此信息#########-->
-    <listener>
-        <listener-class>qunar.ServletWatcher</listener-class>
-    </listener>
-    
      <!--因为ServletWatcher里调用了getParameter，请将下面的filter放置在ServletWatcher之前-->
-	<display-name>oaengine</display-name>
+	<display-name>recruit</display-name>
 	<context-param>
 		<param-name>contextConfigLocation</param-name>
 		<param-value>classpath:spring.xml,classpath:springmvc-servlet.xml</param-value>
@@ -33,6 +27,7 @@
 		<filter-name>encodingFilter</filter-name>
 		<url-pattern>/*</url-pattern>
 	</filter-mapping>
+	<!--
 	 <filter>
         <filter-name>watcher</filter-name>
         <filter-class>qunar.ServletWatcher</filter-class>
@@ -41,6 +36,10 @@
         <filter-name>watcher</filter-name>
         <url-pattern>/*</url-pattern>
     </filter-mapping>
+    <listener>
+        <listener-class>qunar.ServletWatcher</listener-class>
+    </listener>
+    -->
 	<listener>
 		<description>spring监听器</description>
 		<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
