--- a/pom.xml
+++ b/pom.xml
@@ -343,6 +343,7 @@
 				<artifactId>jetty-maven-plugin</artifactId>
 				<version>${jetty.version}</version>
 				<configuration>
+					<contextXml>${project.basedir}/src/main/resources/jetty-context.xml</contextXml> 
 					<connectors>
 						<connector implementation="org.eclipse.jetty.server.nio.SelectChannelConnector">
 							<port>8080</port>
