modify database username password

--- a/src/main/resources/recruit.properties
+++ b/src/main/resources/recruit.properties
@@ -2,10 +2,10 @@ sql.type=postgresql
 jdbc.driver=org.postgresql.Driver
 jdbc.url.read=jdbc:postgresql://l-backyard1.ops.dev.cn6.qunar.com:5432/recruit
 jdbc.username.read=recruit
-jdbc.password.read=recruit
+jdbc.password.read=cLBiNcWNkREp6kL8Wb8kZvYNgd8=
 jdbc.url.write=jdbc:postgresql://l-backyard1.ops.dev.cn6.qunar.com:5432/recruit
 jdbc.username.write=recruit
-jdbc.password.write=recruit
+jdbc.password.write=cLBiNcWNkREp6kL8Wb8kZvYNgd8=
 
 #dbcp settings
 dbcp.initialSize=5
