--- a/pom.xml
+++ b/pom.xml
@@ -310,6 +310,12 @@
 			<artifactId>poi</artifactId>
 			<version>3.11</version>
 		</dependency>
+		
+		<dependency>
+             <groupId>org.apache.poi</groupId>
+             <artifactId>poi-ooxml</artifactId>
+             <version>3.9</version>
+        </dependency>
 
 		<dependency>
 			<groupId>joda-time</groupId>
