--- a/pom.xml
+++ b/pom.xml
@@ -214,6 +214,11 @@
 			</exclusions>
 		</dependency>
 		<dependency>
+                <groupId>qunar.common</groupId>
+                <artifactId>common-web</artifactId>
+                <version>${qunar.common.version}</version>
+        </dependency>
+		<dependency>
 			<groupId>commons-fileupload</groupId>
 			<artifactId>commons-fileupload</artifactId>
 			<version>1.2.2</version>
