--- a/pom.xml
+++ b/pom.xml
@@ -173,6 +173,11 @@
 			<groupId>org.mybatis</groupId>
 			<artifactId>mybatis-spring</artifactId>
 		</dependency>
+		<dependency>
+		    <groupId>com.github.pagehelper</groupId>
+		    <artifactId>pagehelper</artifactId>
+		    <version>4.0.0</version>
+		</dependency>
 		<!-- mysql driver -->
 		<dependency>
 			<artifactId>mysql-connector-java</artifactId>
