--- a/src/main/resources/recruit.properties
+++ b/src/main/resources/recruit.properties
@@ -6,6 +6,7 @@ jdbc.password.read=cLBiNcWNkREp6kL8Wb8kZvYNgd8=
 jdbc.url.write=jdbc:postgresql://l-backyard1.ops.dev.cn6.qunar.com:5432/recruit
 jdbc.username.write=recruit
 jdbc.password.write=cLBiNcWNkREp6kL8Wb8kZvYNgd8=
+#cLBiNcWNkREp6kL8Wb8kZvYNfg9=
 
 #dbcp settings
 dbcp.initialSize=5
