--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -65,7 +65,7 @@
 		<url-pattern>/*</url-pattern>
 	</servlet-mapping>
 	<welcome-file-list>
-		<welcome-file>/recruit/index.html</welcome-file>
+		<welcome-file>index.html</welcome-file>
 	</welcome-file-list>
 	<!-- 配置session超时时间，单位分钟 -->
 	<session-config>
