--- a/src/main/resources.prod/recruit.properties
+++ b/src/main/resources.prod/recruit.properties
@@ -1,11 +1,12 @@
 sql.type=postgresql
 jdbc.driver=org.postgresql.Driver
-jdbc.url.read=jdbc:postgresql://l-backyard1.ops.dev.cn6.qunar.com:5432/recruit
+jdbc.url.read=jdbc:postgresql://l-pgdbvip1.ops.cn8.qunar.com:5432/recruit
 jdbc.username.read=recruit
-jdbc.password.read=cLBiNcWNkREp6kL8Wb8kZvYNgd8=
-jdbc.url.write=jdbc:postgresql://l-backyard1.ops.dev.cn6.qunar.com:5432/recruit
+jdbc.password.read=6a111dcf-2b34-4931-9924-6c45bef4af72
+jdbc.url.write=jdbc:postgresql://l-pgdbvip1.ops.cn8.qunar.com:5432/recruit
 jdbc.username.write=recruit
-jdbc.password.write=cLBiNcWNkREp6kL8Wb8kZvYNgd8=
+jdbc.password.write=6a111dcf-2b34-4931-9924-6c45bef4af72
+#cLBiNcWNkREp6kL8Wb8kZvYNfg9=
 
 #dbcp settings
 dbcp.initialSize=5
