--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -97,25 +97,26 @@
 	<session-config>
 		<session-timeout>720</session-timeout>
 	</session-config>
-
+	<!--
 	<error-page>
         <error-code>400</error-code>
-        <location>/error.html</location>
+        <location>/error_400.html</location>
     </error-page>
     <error-page>
         <error-code>403</error-code>
-        <location>/error.html</location>
+        <location>/error_403.html</location>
     </error-page>
     <error-page>
         <error-code>404</error-code>
-        <location>/error.html</location>
+        <location>/error_404.html</location>
     </error-page>
     <error-page>
         <error-code>415</error-code>
-        <location>/error.html</location>
+        <location>/error_415.html</location>
     </error-page>
     <error-page>
         <error-code>500</error-code>
-        <location>/error.html</location>
+        <location>/error_500.html</location>
     </error-page>
+    -->
 </web-app>
