--- a/src/main/resources/recruit.properties
+++ b/src/main/resources/recruit.properties
@@ -1,11 +1,11 @@
 sql.type=postgresql
 jdbc.driver=org.postgresql.Driver
-jdbc.url.read=jdbc:postgresql://l-backyard1.ops.dev.cn6.qunar.com:5432/recruit
-jdbc.username.read=recruit
-jdbc.password.read=cLBiNcWNkREp6kL8Wb8kZvYNgd8=
-jdbc.url.write=jdbc:postgresql://l-backyard1.ops.dev.cn6.qunar.com:5432/recruit
-jdbc.username.write=recruit
-jdbc.password.write=cLBiNcWNkREp6kL8Wb8kZvYNgd8=
+jdbc.url.read=jdbc:postgresql://localhost:5432/recruit
+jdbc.username.read=postgres
+jdbc.password.read=root
+jdbc.url.write=jdbc:postgresql://localhost:5432/recruit
+jdbc.username.write=postgres
+jdbc.password.write=root
 #cLBiNcWNkREp6kL8Wb8kZvYNfg9=
 
 #dbcp settings
